<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marketinganalyzer.Activities.NewProjectActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/activity_title_left_margin"
        android:layout_marginTop="@dimen/activity_title_top_margin"
        android:text="@string/new_project_text_available_templates"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/new_projects_radioGroup"
        android:layout_width="298dp"
        android:layout_height="146dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" >

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_project_text_project_name"
        style="@style/Widget.MainTheme.TextInputLayout"
        android:layout_width="@dimen/input_text_layout_width"
        android:layout_height="@dimen/input_text_layout_height"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/new_project_text_project_name_hint"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/new_projects_radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/MainTheme.TextAppearanceTextFields"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/new_project_button_create"
        style="@style/Widget.MainTheme.Button.TypeA"
        android:layout_width="@dimen/button_submit_width"
        android:layout_height="@dimen/button_submit_height"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="@dimen/button_submit_margin_buttom"
        android:text="@string/new_project_button_create_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_project_text_project_name"
        app:layout_constraintVertical_bias="0.271" />

    <TextView
        android:id="@+id/new_project_text_loading"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="560dp"
        android:text="@string/new_project_text_loading"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:text="@string/new_project_text_api_title"
        android:textAppearance="?attr/textAppearanceHeadline3"
        app:layout_constraintStart_toStartOf="@+id/new_projects_radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/new_projects_radioGroup" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="333dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_project_text_api_description"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
