<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marketinganalyzer.Activities.ProfilePageActivity">


    <TextView
        android:id="@+id/profile_text_welcome_username"
        android:layout_width="278dp"
        android:layout_height="64dp"
        android:layout_marginStart="@dimen/activity_title_left_margin"
        android:layout_marginTop="@dimen/activity_title_top_margin"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_button_create_project"
        style="@style/Widget.MainTheme.Button.TypeA"
        android:layout_width="@dimen/button_submit_width"
        android:layout_height="@dimen/button_submit_height"
        android:layout_marginBottom="@dimen/button_submit_margin_buttom"
        android:text="@string/profile_button_create_new_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_button_logout" />

    <Button
        android:id="@+id/profile_button_logout"
        style="@style/Widget.MainTheme.Button.TypeA"
        android:layout_width="@dimen/button_submit_width"
        android:layout_height="@dimen/button_submit_height"
        android:layout_marginTop="16dp"
        android:text="@string/profile_button_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_projects_scroll_view" />

    <TextView
        android:id="@+id/textView_current_Projects"
        android:layout_width="198dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:text="@string/profile_text_current_Projects"
        android:textAppearance="?attr/textAppearanceHeadline3"
        app:layout_constraintStart_toStartOf="@+id/profile_text_welcome_username"
        app:layout_constraintTop_toBottomOf="@+id/profile_text_welcome_username" />

    <ScrollView
        android:id="@+id/profile_projects_scroll_view"
        android:layout_width="@dimen/linear_layout_width"
        android:layout_height="273dp"
        android:contentDescription="@string/profile_projects_scroll_view_description"
        app:layout_constraintStart_toStartOf="@+id/textView_current_Projects"
        app:layout_constraintTop_toBottomOf="@+id/textView_current_Projects">

        <LinearLayout
            android:id="@+id/profile_layout_projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
